--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <script>
     const foo = () => {
-      const foo = fetch('http://localhost:8888/')
+      fetch('http://localhost:8888/')
         .then(r => r.json())
         .then(xs => {
           const list = document.getElementById('myUL')
